# OwlDrone

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  depmanager.yml  pyproject.toml
cmake/: BaseConfig.cmake  CMakePresetsBase.json  CMakePresetsLinux.json  Depmanager.cmake  Environment.cmake  OwlUtils.cmake  Poetry.cmake  importSharedLibs.py
sources/: DroneLayer.cpp  DroneLayer.h  main.cpp
sources/IO/: CameraSystem.cpp  CameraSystem.h  DeviceManager.cpp  DeviceManager.h  DroneSettings.cpp  DroneSettings.h
sources/controller/: RemoteController.cpp  RemoteController.h
sources/panels/: BasePanel.h  Gauges.cpp  Gauges.h  Information.h  Settings.cpp  Settings.h  Viewport.h
sources/panels/gauge/: AirSpeed.cpp  AirSpeed.h  Altitude.cpp  Altitude.h  ArtificialHorizon.cpp  ArtificialHorizon.h  BaseGauge.cpp  BaseGauge.h  Compas.cpp  Compas.h  MotorRate.cpp  MotorRate.h  VerticalSpeed.cpp  VerticalSpeed.h
